--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,33 +1,292 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/colorPrimaryDark"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical">
 
-    </com.google.android.material.appbar.AppBarLayout>
+            <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
 
-    <include layout="@layout/content_main" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="230dp"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:background="@drawable/back">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+                    <ImageView
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:src="@drawable/filmpix"
+                        android:layout_gravity="center"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="FILM PIX DASHBOARD"
+                        android:textColor="#ffffff"
+                        android:gravity="center"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        android:layout_marginTop="10dp"/>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginTop="215dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="135dp"
+                        android:orientation="horizontal"
+                        android:layout_marginBottom="10dp">
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width = "0dp"
+                            android:layout_height = "match_parent"
+                            android:layout_weight = "1"
+                            android:gravity = "center"
+                            android:layout_marginRight = "5dp"
+                            android:orientation= "vertical">
+
+                            <RelativeLayout
+                                android:layout_width = "match_parent"
+                                android:layout_height = "match_parent">
+
+                                <ImageView
+                                    android:layout_width = "50dp"
+                                    android:id = "@+id/imageView1"
+                                    android:layout_height = "50dp"
+                                    android:src = "@drawable/profile"
+                                    android:layout_centerInParent = "true">
+                                </ImageView>
+
+                                <TextView
+                                    android:layout_width = "wrap_content"
+                                    android:layout_height = "wrap_content"
+                                    android:text = "PROFILE"
+                                    android:textSize = "16sp"
+                                    android:layout_below = "@+id/imageView1"
+                                    android:layout_centerHorizontal = "true"
+                                    android:layout_marginTop = "10dp"
+                                    android:layout_marginBottom = "10dp">
+
+                                </TextView>
+
+                                <Button
+                                    android:layout_width = "match_parent"
+                                    android:layout_height = "match_parent"
+                                    android:id = "@+id/buttonProfile"
+                                    android:background = "@android:color/transparent">
+
+                                </Button>
+
+                            </RelativeLayout>
+
+                        </androidx.cardview.widget.CardView>
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width = "0dp"
+                            android:layout_height = "match_parent"
+                            android:layout_weight = "1"
+                            android:gravity = "center"
+                            android:layout_marginLeft = "5dp"
+                            android:orientation= "vertical">
+
+                            <RelativeLayout
+                                android:layout_width = "match_parent"
+                                android:layout_height = "match_parent">
+
+                                <ImageView
+                                    android:layout_width = "50dp"
+                                    android:id = "@+id/imageView2"
+                                    android:layout_height = "50dp"
+                                    android:src = "@drawable/cart"
+                                    android:layout_centerInParent = "true">
+                                </ImageView>
+
+                                <TextView
+                                    android:layout_width = "wrap_content"
+                                    android:layout_height = "wrap_content"
+                                    android:text = "CART"
+                                    android:textSize = "16sp"
+                                    android:layout_below = "@+id/imageView2"
+                                    android:layout_centerHorizontal = "true"
+                                    android:layout_marginTop = "10dp"
+                                    android:layout_marginBottom = "10dp">
+
+                                </TextView>
+
+                                <Button
+                                    android:layout_width = "match_parent"
+                                    android:layout_height = "match_parent"
+                                    android:id = "@+id/buttonCart"
+                                    android:background = "@android:color/transparent">
+
+                                </Button>
+
+                            </RelativeLayout>
+
+
+
+
+                        </androidx.cardview.widget.CardView>
+
+
+
+
+
+
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="135dp"
+                        android:orientation="horizontal"
+                        android:layout_marginBottom="10dp">
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width = "0dp"
+                            android:layout_height = "match_parent"
+                            android:layout_weight = "1"
+                            android:gravity = "center"
+                            android:layout_marginRight = "5dp"
+                            android:orientation= "vertical">
+
+                            <RelativeLayout
+                                android:layout_width = "match_parent"
+                                android:layout_height = "match_parent">
+
+                                <ImageView
+                                    android:layout_width = "50dp"
+                                    android:id = "@+id/imageView3"
+                                    android:layout_height = "50dp"
+                                    android:src = "@drawable/equipment"
+                                    android:layout_centerInParent = "true">
+                                </ImageView>
+
+                                <TextView
+                                    android:layout_width = "wrap_content"
+                                    android:layout_height = "wrap_content"
+                                    android:text = "EQUIPMENT"
+                                    android:textSize = "16sp"
+                                    android:layout_below = "@+id/imageView3"
+                                    android:layout_centerHorizontal = "true"
+                                    android:layout_marginTop = "10dp"
+                                    android:layout_marginBottom = "10dp">
+
+                                </TextView>
+
+                                <Button
+                                    android:layout_width = "match_parent"
+                                    android:layout_height = "match_parent"
+                                    android:id = "@+id/buttonEquipment"
+                                    android:background = "@android:color/transparent">
+
+                                </Button>
+
+                            </RelativeLayout>
+
+
+
+
+                        </androidx.cardview.widget.CardView>
+                        <androidx.cardview.widget.CardView
+                            android:layout_width = "0dp"
+                            android:layout_height = "match_parent"
+                            android:layout_weight = "1"
+                            android:gravity = "center"
+                            android:layout_marginLeft = "5dp"
+                            android:orientation= "vertical">
+
+                            <RelativeLayout
+                                android:layout_width = "match_parent"
+                                android:layout_height = "match_parent">
+
+                                <ImageView
+                                    android:layout_width = "50dp"
+                                    android:id = "@+id/imageView4"
+                                    android:layout_height = "50dp"
+                                    android:src = "@drawable/logout"
+                                    android:layout_centerInParent = "true">
+                                </ImageView>
+
+                                <TextView
+                                    android:layout_width = "wrap_content"
+                                    android:layout_height = "wrap_content"
+                                    android:text = "LOGOUT"
+                                    android:textSize = "16sp"
+                                    android:layout_below = "@+id/imageView4"
+                                    android:layout_centerHorizontal = "true"
+                                    android:layout_marginTop = "10dp"
+                                    android:layout_marginBottom = "10dp">
+
+                                </TextView>
+
+                                <Button
+                                    android:layout_width = "match_parent"
+                                    android:layout_height = "match_parent"
+                                    android:id = "@+id/buttonLogout"
+                                    android:background = "@android:color/transparent">
+
+                                </Button>
+
+                            </RelativeLayout>
+
+
+
+
+                        </androidx.cardview.widget.CardView>
+
+
+
+
+
+
+
+                    </LinearLayout>
+
+
+                </LinearLayout>
+
+
+
+
+
+
+
+            </RelativeLayout>
+
+        </LinearLayout>
+
+
+
+
+
+
+    </ScrollView>
+
+
+
+
+</RelativeLayout>
